@@ -20,7 +20,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *   $Id: s_log.c,v 1.7 1999/10/14 02:48:26 lusky Exp $
+ *   $Id: s_log.c,v 1.8 1999/11/16 05:04:38 lusky Exp $
  */
 #include "s_log.h"
 #include "irc_string.h"
@@ -39,9 +39,13 @@
 
 #define LOG_BUFSIZE 2048 
 
+#ifdef USE_LOGFILE
 static int logFile = -1;
+#endif /* USE_LOGFILE */
+
 static int logLevel = INIT_LOG_LEVEL;
 
+#ifdef USE_SYSLOG
 static int sysLogLevel[] = {
   LOG_CRIT,
   LOG_ERR,
@@ -51,6 +55,7 @@ static int sysLogLevel[] = {
   LOG_INFO,
   LOG_INFO
 };
+#endif /* USE_SYSLOG */
 
 static const char *logLevelToString[] =
 { "L_CRIT",
