@@ -20,7 +20,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *  $Id: s_user.c,v 1.215 1999/10/10 01:30:28 lusky Exp $
+ *  $Id: s_user.c,v 1.216 2000/02/01 00:44:13 lusky Exp $
  */
 #include "s_user.h"
 #include "channel.h"
@@ -1023,7 +1023,9 @@ static int valid_username(const char* username)
 static int
 tell_user_off(aClient *cptr, char **preason )
 {
+#ifdef KLINE_WITH_REASON
   char* p = 0;
+#endif /* KLINE_WITH_REASON */
 
   /* Ok... if using REJECT_HOLD, I'm not going to dump
    * the client immediately, but just mark the client for exit
